--- a/content3.html
+++ b/content3.html
@@ -1,3 +1,178 @@
+<a id="Russell"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Russell</h3>
+  </li>
+  <li class="date">
+    May 2013
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/russell/IMG_0544.jpg"
+      title="We met Nick and Stephan at Iceberg Lake. Like us, they were climbing Fishhook."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0544.jpg" alt="IMG_0544.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/russell/IMG_0544.jpg" alt="IMG_0544.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/russell/IMG_0557.jpg"
+      title="Passing in front of Whitney on our way to the Whitney-Russell pass."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0557.jpg" alt="IMG_0557.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/russell/IMG_0557.jpg" alt="IMG_0557.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/russell/IMG_0564.jpg"
+      title="The Fishhook arete. We woke up too early and waited two hours for the rock to warm up."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="101" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0564.jpg" alt="IMG_0564.jpg" />
+      <noscript>
+        <img width="101" height="120" src="thumbs/russell/IMG_0564.jpg" alt="IMG_0564.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/russell/IMG_0583.jpg"
+      title="The first pitch to gain the arete. One of the three 5.9 pitches."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0583.jpg" alt="IMG_0583.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/russell/IMG_0583.jpg" alt="IMG_0583.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/russell/IMG_0596.jpg"
+      title="The exposure was amazing through the all climb!"
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0596.jpg" alt="IMG_0596.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/russell/IMG_0596.jpg" alt="IMG_0596.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/russell/IMG_0604.jpg"
+      title="Getting ready for the crux of the climb, the third (5.9) pitch."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0604.jpg" alt="IMG_0604.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/russell/IMG_0604.jpg" alt="IMG_0604.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/russell/IMG_0606.jpg"
+      title="We froze our hands during the first few pitches."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0606.jpg" alt="IMG_0606.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/russell/IMG_0606.jpg" alt="IMG_0606.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/russell/IMG_0609.jpg"
+      title="The 4th pitch starts with a boulder problem cruises to a notch splitting the arete in two."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0609.jpg" alt="IMG_0609.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/russell/IMG_0609.jpg" alt="IMG_0609.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/russell/IMG_0611.jpg"
+      title="Benji leading the best pitch (5th) of the climb."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0611.jpg" alt="IMG_0611.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/russell/IMG_0611.jpg" alt="IMG_0611.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/russell/IMG_0617.jpg"
+      title="Looking down from the top of the fifth pitch onto the first four and the notch. Three more pitches to go."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0617.jpg" alt="IMG_0617.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/russell/IMG_0617.jpg" alt="IMG_0617.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/russell/IMG_0619.jpg"
+      title="The east ridge of Russell is sharp and steep. Probably the best 3rd class in the Sierras."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0619.jpg" alt="IMG_0619.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/russell/IMG_0619.jpg" alt="IMG_0619.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/russell/IMG_0623.jpg"
+      title=""
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0623.jpg" alt="IMG_0623.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/russell/IMG_0623.jpg" alt="IMG_0623.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/russell/IMG_0639.jpg"
+      title="We summitted at around 3:15. The whole climb took about 6 and a half hours."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0639.jpg" alt="IMG_0639.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/russell/IMG_0639.jpg" alt="IMG_0639.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/russell/IMG_0646.jpg"
+      title="Dark menacing clouds started to appear... We had an unplesant night with high winds."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0646.jpg" alt="IMG_0646.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/russell/IMG_0646.jpg" alt="IMG_0646.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/russell/IMG_0650_panorama.jpg"
+      title="The north face of Whitney is the first on the left. Mt Muir is one peak further left."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="590" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0650_panorama.jpg" alt="IMG_0650_panorama.jpg" />
+      <noscript>
+        <img width="590" height="120" src="thumbs/russell/IMG_0650_panorama.jpg" alt="IMG_0650_panorama.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/russell/IMG_0655.jpg"
+      title="But the next morning, the sky was clear. However, high winds persisted..."
+      onclick="return hs.expand(this, config_russell)">
+      <img class="lazy galleries/russell" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/russell/IMG_0655.jpg" alt="IMG_0655.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/russell/IMG_0655.jpg" alt="IMG_0655.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="EastButtress"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -736,118 +911,3 @@
   <div style="clear:both"></div>
 </div>
 
-<a id="Pinnacles"></a> 
-<ul class="titlebar">
-  <li class="title">
-    <h3>Pinnacles</h3>
-  </li>
-  <li class="date">
-    October &amp; December 2012
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/pinnacles/IMG_0010.jpg"
-      title="The reservoir. The right pinnacle has a route going up it that I want to check out. "
-      onclick="return hs.expand(this, config_pinnacles)">
-      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0010.jpg" alt="IMG_0010.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles/IMG_0010.jpg" alt="IMG_0010.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/pinnacles/IMG_0012.jpg"
-      title="The south (and east) side of the monolith."
-      onclick="return hs.expand(this, config_pinnacles)">
-      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0012.jpg" alt="IMG_0012.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles/IMG_0012.jpg" alt="IMG_0012.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/pinnacles/IMG_0019.jpg"
-      title="Anders climbing Post Orgasmic Depression."
-      onclick="return hs.expand(this, config_pinnacles)">
-      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0019.jpg" alt="IMG_0019.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles/IMG_0019.jpg" alt="IMG_0019.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/pinnacles/IMG_0020.jpg"
-      title="Hiking the High Peaks trail in October with Shaon & co."
-      onclick="return hs.expand(this, config_pinnacles)">
-      <img class="lazy galleries/pinnacles" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0020.jpg" alt="IMG_0020.jpg" />
-      <noscript>
-        <img width="180" height="120" src="thumbs/pinnacles/IMG_0020.jpg" alt="IMG_0020.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/pinnacles/IMG_0021.jpg"
-      title="We did an eight miles loop passing by Hawkins Peak."
-      onclick="return hs.expand(this, config_pinnacles)">
-      <img class="lazy galleries/pinnacles" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0021.jpg" alt="IMG_0021.jpg" />
-      <noscript>
-        <img width="180" height="120" src="thumbs/pinnacles/IMG_0021.jpg" alt="IMG_0021.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/pinnacles/IMG_0024.jpg"
-      title="The Balconies, on the west side, viewed from the second pitch of Machete Direct."
-      onclick="return hs.expand(this, config_pinnacles)">
-      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0024.jpg" alt="IMG_0024.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles/IMG_0024.jpg" alt="IMG_0024.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/pinnacles/IMG_0030.jpg"
-      title="Machete Ridge, viewed from the Balconies. Pitch 3 and up of Machete Direct are visible."
-      onclick="return hs.expand(this, config_pinnacles)">
-      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0030.jpg" alt="IMG_0030.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles/IMG_0030.jpg" alt="IMG_0030.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/pinnacles/IMG_0039.jpg"
-      title="Kai leading Lava Fall, a west side classic. Great easy overhaning climb."
-      onclick="return hs.expand(this, config_pinnacles)">
-      <img class="lazy galleries/pinnacles" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0039.jpg" alt="IMG_0039.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/pinnacles/IMG_0039.jpg" alt="IMG_0039.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/pinnacles/IMG_0051.jpg"
-      title="Dusk on Machete Ridge."
-      onclick="return hs.expand(this, config_pinnacles)">
-      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0051.jpg" alt="IMG_0051.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles/IMG_0051.jpg" alt="IMG_0051.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/pinnacles/IMG_0056.jpg"
-      title="Sunset from the parking lot."
-      onclick="return hs.expand(this, config_pinnacles)">
-      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0056.jpg" alt="IMG_0056.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/pinnacles/IMG_0056.jpg" alt="IMG_0056.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
