--- a/content4.html
+++ b/content4.html
@@ -1,3 +1,118 @@
+<a id="Pinnacles"></a> 
+<ul class="titlebar">
+  <li class="title">
+    <h3>Pinnacles</h3>
+  </li>
+  <li class="date">
+    October &amp; December 2012
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/pinnacles/IMG_0010.jpg"
+      title="The reservoir. The right pinnacle has a route going up it that I want to check out. "
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0010.jpg" alt="IMG_0010.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0010.jpg" alt="IMG_0010.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/pinnacles/IMG_0012.jpg"
+      title="The south (and east) side of the monolith."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0012.jpg" alt="IMG_0012.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0012.jpg" alt="IMG_0012.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/pinnacles/IMG_0019.jpg"
+      title="Anders climbing Post Orgasmic Depression."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0019.jpg" alt="IMG_0019.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0019.jpg" alt="IMG_0019.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/pinnacles/IMG_0020.jpg"
+      title="Hiking the High Peaks trail in October with Shaon & co."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0020.jpg" alt="IMG_0020.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/pinnacles/IMG_0020.jpg" alt="IMG_0020.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/pinnacles/IMG_0021.jpg"
+      title="We did an eight miles loop passing by Hawkins Peak."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="180" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0021.jpg" alt="IMG_0021.jpg" />
+      <noscript>
+        <img width="180" height="120" src="thumbs/pinnacles/IMG_0021.jpg" alt="IMG_0021.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/pinnacles/IMG_0024.jpg"
+      title="The Balconies, on the west side, viewed from the second pitch of Machete Direct."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0024.jpg" alt="IMG_0024.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0024.jpg" alt="IMG_0024.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot1">
+    <a class="highslide" href="hq/pinnacles/IMG_0030.jpg"
+      title="Machete Ridge, viewed from the Balconies. Pitch 3 and up of Machete Direct are visible."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0030.jpg" alt="IMG_0030.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0030.jpg" alt="IMG_0030.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/pinnacles/IMG_0039.jpg"
+      title="Kai leading Lava Fall, a west side classic. Great easy overhaning climb."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0039.jpg" alt="IMG_0039.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/pinnacles/IMG_0039.jpg" alt="IMG_0039.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/pinnacles/IMG_0051.jpg"
+      title="Dusk on Machete Ridge."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0051.jpg" alt="IMG_0051.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0051.jpg" alt="IMG_0051.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/pinnacles/IMG_0056.jpg"
+      title="Sunset from the parking lot."
+      onclick="return hs.expand(this, config_pinnacles)">
+      <img class="lazy galleries/pinnacles" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/pinnacles/IMG_0056.jpg" alt="IMG_0056.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/pinnacles/IMG_0056.jpg" alt="IMG_0056.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="CathedralPeak"></a> 
 <ul class="titlebar">
   <li class="title">
