--- a/index.html
+++ b/index.html
@@ -22,6 +22,56 @@
 <a id="ayala"></a>
 <ul class="titlebar">
   <li class="title">
+    <h3>Lover's Leap</h3>
+  </li>
+  <li class="date">
+    June 2015
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/loversleap/IMG_2448.jpg"
+      title=""
+      onclick="return hs.expand(this, config_loversleap)">
+      <img width="90" height="120" src="thumbs/loversleap/IMG_2448.jpg" alt="IMG_2448.jpg" />
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/loversleap/IMG_2457.jpg"
+      title=""
+      onclick="return hs.expand(this, config_loversleap)">
+      <img width="90" height="120" src="thumbs/loversleap/IMG_2457.jpg" alt="IMG_2457.jpg" />
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/loversleap/IMG_2459.jpg"
+      title=""
+      onclick="return hs.expand(this, config_loversleap)">
+      <img width="160" height="120" src="thumbs/loversleap/IMG_2459.jpg" alt="IMG_2459.jpg" />
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/loversleap/IMG_2468.jpg"
+      title=""
+      onclick="return hs.expand(this, config_loversleap)">
+      <img width="160" height="120" src="thumbs/loversleap/IMG_2468.jpg" alt="IMG_2468.jpg" />
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/loversleap/IMG_2487.jpg"
+      title=""
+      onclick="return hs.expand(this, config_loversleap)">
+      <img width="160" height="120" src="thumbs/loversleap/IMG_2487.jpg" alt="IMG_2487.jpg" />
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
+<a id="ayala"></a>
+<ul class="titlebar">
+  <li class="title">
     <h3>Ayala Cove (25km)</h3>
   </li>
   <li class="date">
@@ -36,35 +86,50 @@
     <a class="highslide" href="hq/ayala/IMG_2364.jpg"
       title=""
       onclick="return hs.expand(this, config_ayala)">
-      <img width="160" height="120" src="thumbs/ayala/IMG_2364.jpg" alt="IMG_2364.jpg" />
+      <img class="lazy galleries/ayala" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ayala/IMG_2364.jpg" alt="IMG_2364.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ayala/IMG_2364.jpg" alt="IMG_2364.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot2">
     <a class="highslide" href="hq/ayala/IMG_2378.jpg"
       title=""
       onclick="return hs.expand(this, config_ayala)">
-      <img width="160" height="120" src="thumbs/ayala/IMG_2378.jpg" alt="IMG_2378.jpg" />
+      <img class="lazy galleries/ayala" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ayala/IMG_2378.jpg" alt="IMG_2378.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ayala/IMG_2378.jpg" alt="IMG_2378.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot3">
     <a class="highslide" href="hq/ayala/IMG_2417.jpg"
       title=""
       onclick="return hs.expand(this, config_ayala)">
-      <img width="160" height="120" src="thumbs/ayala/IMG_2417.jpg" alt="IMG_2417.jpg" />
+      <img class="lazy galleries/ayala" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ayala/IMG_2417.jpg" alt="IMG_2417.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ayala/IMG_2417.jpg" alt="IMG_2417.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot4">
     <a class="highslide" href="hq/ayala/IMG_2430.jpg"
       title=""
       onclick="return hs.expand(this, config_ayala)">
-      <img width="160" height="120" src="thumbs/ayala/IMG_2430.jpg" alt="IMG_2430.jpg" />
+      <img class="lazy galleries/ayala" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ayala/IMG_2430.jpg" alt="IMG_2430.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ayala/IMG_2430.jpg" alt="IMG_2430.jpg" />
+      </noscript>
     </a>
   </div>
   <div class="photo rot5">
     <a class="highslide" href="hq/ayala/IMG_2436.jpg"
       title=""
       onclick="return hs.expand(this, config_ayala)">
-      <img width="160" height="120" src="thumbs/ayala/IMG_2436.jpg" alt="IMG_2436.jpg" />
+      <img class="lazy galleries/ayala" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ayala/IMG_2436.jpg" alt="IMG_2436.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ayala/IMG_2436.jpg" alt="IMG_2436.jpg" />
+      </noscript>
     </a>
   </div>
   <div style="clear:both"></div>
@@ -573,81 +638,6 @@
       <img class="lazy galleries/poemealoup" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/poemealoup/IMG_2079.jpg" alt="IMG_2079.jpg" />
       <noscript>
         <img width="160" height="120" src="thumbs/poemealoup/IMG_2079.jpg" alt="IMG_2079.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="ptreyes"></a>
-<ul class="titlebar">
-  <li class="title">
-    <h3>Point Reyes</h3>
-  </li>
-  <li class="date">
-    August 2014
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/ptreyes/IMG_2015.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ptreyes)">
-      <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2015.jpg" alt="IMG_2015.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/ptreyes/IMG_2015.jpg" alt="IMG_2015.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/ptreyes/IMG_2017.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ptreyes)">
-      <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2017.jpg" alt="IMG_2017.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/ptreyes/IMG_2017.jpg" alt="IMG_2017.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/ptreyes/IMG_2019.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ptreyes)">
-      <img class="lazy galleries/ptreyes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2019.jpg" alt="IMG_2019.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/ptreyes/IMG_2019.jpg" alt="IMG_2019.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/ptreyes/IMG_2027.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ptreyes)">
-      <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2027.jpg" alt="IMG_2027.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/ptreyes/IMG_2027.jpg" alt="IMG_2027.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/ptreyes/IMG_2033.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ptreyes)">
-      <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2033.jpg" alt="IMG_2033.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/ptreyes/IMG_2033.jpg" alt="IMG_2033.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/ptreyes/IMG_2037.jpg"
-      title=""
-      onclick="return hs.expand(this, config_ptreyes)">
-      <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2037.jpg" alt="IMG_2037.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/ptreyes/IMG_2037.jpg" alt="IMG_2037.jpg" />
       </noscript>
     </a>
   </div>
