--- a/content1.html
+++ b/content1.html
@@ -1,3 +1,78 @@
+<a id="ptreyes"></a>
+<ul class="titlebar">
+  <li class="title">
+    <h3>Point Reyes</h3>
+  </li>
+  <li class="date">
+    August 2014
+  </li>
+</ul>
+<div style="clear:both"></div>
+<div class="line"></div>
+
+<div class="highslide-gallery wrap">
+  <div class="photo rot1">
+    <a class="highslide" href="hq/ptreyes/IMG_2015.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2015.jpg" alt="IMG_2015.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ptreyes/IMG_2015.jpg" alt="IMG_2015.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot2">
+    <a class="highslide" href="hq/ptreyes/IMG_2017.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2017.jpg" alt="IMG_2017.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ptreyes/IMG_2017.jpg" alt="IMG_2017.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot3">
+    <a class="highslide" href="hq/ptreyes/IMG_2019.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img class="lazy galleries/ptreyes" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2019.jpg" alt="IMG_2019.jpg" />
+      <noscript>
+        <img width="90" height="120" src="thumbs/ptreyes/IMG_2019.jpg" alt="IMG_2019.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot4">
+    <a class="highslide" href="hq/ptreyes/IMG_2027.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2027.jpg" alt="IMG_2027.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ptreyes/IMG_2027.jpg" alt="IMG_2027.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot5">
+    <a class="highslide" href="hq/ptreyes/IMG_2033.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2033.jpg" alt="IMG_2033.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ptreyes/IMG_2033.jpg" alt="IMG_2033.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div class="photo rot0">
+    <a class="highslide" href="hq/ptreyes/IMG_2037.jpg"
+      title=""
+      onclick="return hs.expand(this, config_ptreyes)">
+      <img class="lazy galleries/ptreyes" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/ptreyes/IMG_2037.jpg" alt="IMG_2037.jpg" />
+      <noscript>
+        <img width="160" height="120" src="thumbs/ptreyes/IMG_2037.jpg" alt="IMG_2037.jpg" />
+      </noscript>
+    </a>
+  </div>
+  <div style="clear:both"></div>
+</div>
 <a id="Shuteye"></a> 
 <ul class="titlebar">
   <li class="title">
@@ -910,131 +985,6 @@
       <img class="lazy galleries/hpointe" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/hpointe/IMG_1299.jpg" alt="IMG_1299.jpg" />
       <noscript>
         <img width="90" height="120" src="thumbs/hpointe/IMG_1299.jpg" alt="IMG_1299.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div style="clear:both"></div>
-</div>
-<a id="Bostan"></a>
-<ul class="titlebar">
-  <li class="title">
-    <h3>Tête de Bostan</h3>
-  </li>
-  <li class="date">
-    December 2013
-  </li>
-</ul>
-<div style="clear:both"></div>
-<div class="line"></div>
-
-<div class="highslide-gallery wrap">
-  <div class="photo rot1">
-    <a class="highslide" href="hq/bostan/IMG_1182.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1182.jpg" alt="IMG_1182.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1182.jpg" alt="IMG_1182.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/bostan/IMG_1188.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="90" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1188.jpg" alt="IMG_1188.jpg" />
-      <noscript>
-        <img width="90" height="120" src="thumbs/bostan/IMG_1188.jpg" alt="IMG_1188.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/bostan/IMG_1190.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1190.jpg" alt="IMG_1190.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1190.jpg" alt="IMG_1190.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/bostan/IMG_1192.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1192.jpg" alt="IMG_1192.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1192.jpg" alt="IMG_1192.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/bostan/IMG_1202.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1202.jpg" alt="IMG_1202.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1202.jpg" alt="IMG_1202.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot0">
-    <a class="highslide" href="hq/bostan/IMG_1206.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1206.jpg" alt="IMG_1206.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1206.jpg" alt="IMG_1206.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot1">
-    <a class="highslide" href="hq/bostan/IMG_1209.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1209.jpg" alt="IMG_1209.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1209.jpg" alt="IMG_1209.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot2">
-    <a class="highslide" href="hq/bostan/IMG_1212.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1212.jpg" alt="IMG_1212.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1212.jpg" alt="IMG_1212.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot3">
-    <a class="highslide" href="hq/bostan/IMG_1213.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1213.jpg" alt="IMG_1213.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1213.jpg" alt="IMG_1213.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot4">
-    <a class="highslide" href="hq/bostan/IMG_1215.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1215.jpg" alt="IMG_1215.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1215.jpg" alt="IMG_1215.jpg" />
-      </noscript>
-    </a>
-  </div>
-  <div class="photo rot5">
-    <a class="highslide" href="hq/bostan/IMG_1221.jpg"
-      title=""
-      onclick="return hs.expand(this, config_bostan)">
-      <img class="lazy galleries/bostan" width="160" height="120" src="highslide/graphics/ffffff.gif" data-original="thumbs/bostan/IMG_1221.jpg" alt="IMG_1221.jpg" />
-      <noscript>
-        <img width="160" height="120" src="thumbs/bostan/IMG_1221.jpg" alt="IMG_1221.jpg" />
       </noscript>
     </a>
   </div>
